# SQLIR

mlir/examples/: CMakeLists.txt
mlir/examples/toy/: CMakeLists.txt
mlir/examples/toy/Ch8/: CMakeLists.txt
mlir/examples/toy/compiler_project/: CMakeLists.txt  main.cpp
mlir/examples/toy/compiler_project/cpp_codegen/: ast.cpp  ast.h  compile.cpp  compile.h  expr.cpp  expr.h  expr_builder.h  node.cpp  node.h  symbol.h  type.cpp  type.h
mlir/examples/toy/compiler_project/include/cpp_codegen/: ast.h  expr.h  expr_builder.h  node.h  node_builders.h  type.h  type_builder.h
mlir/examples/toy/compiler_project/include/mlir/: CMakeLists.txt  Dialect.h  MLIRGen.h
mlir/examples/toy/compiler_project/mlir/: Dialect.cpp
mlir/test/: CMakeLists.txt
